--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="body-panel">
       <div class="body-image">
         <!-- swap this file name for your nice anatomy image -->
-        <img src="anatomy.png" alt="Human anatomy" />
+        <img src="OIP.jpg" alt="Human anatomy" />
+
         <!-- clickable hotspots -->
         <button class="hotspot" data-region="chest" style="top:32%;left:48%;"></button>
         <button class="hotspot" data-region="abdomen" style="top:47%;left:49%;"></button>
