--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="body-panel">
       <div class="body-image" id="bodyImage">
         <!-- your current image (torso to knees) -->
-        <img src="glass-human.png" alt="Glass human anatomy" />
+        <img src="Glassbody.png" alt="Glass human anatomy" />
 
         <!-- start with more hotspots; you can drag them -->
         <button class="hotspot" data-region="head" style="top:15%;left:50%;"></button>
