--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
         <ul id="factors"></ul>
         <ul id="actions"></ul>
         <p class="small">Educational only. Not medical advice.</p>
+
+        <div class="cta-box">
+  <h4>Ready to act on this?</h4>
+  <p>This insight is the why. Root Health will help you manage, track and repair the pattern.</p>
+  <button id="continueBtn" class="secondary">Continue in RootHealth.app →</button>
+</div>
+
       </div>
     </div>
   </div>
