--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="wrapper">
     <!-- LEFT: big anatomy image -->
     <div class="body-panel">
-      <div class="body-image" id="bodyImage">
+      <div class="body-image glow" id="bodyImage">
         <!-- your current image (torso to knees) -->
         <img src="Glassbody.png" alt="Glass human anatomy" />
 
