--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             <img
               id="glass-image"
               class="glass-image"
-              src="Glassbody.png"
+              src="/glass/Glassbody.png"
               alt="Glass human body outline"
             />
             <div id="marker-layer" class="marker-layer"></div>
