Fix image source path for glass image
Updated the image source path for the glass image.

--- a/index.html
+++ b/index.html
@@ -430,11 +430,12 @@
         <section class="figure-panel">
           <div class="figure-wrapper">
             <img
-              id="glass-image"
-              class="glass-image"
-              src="/glass/Glassbody.png"
-              alt="Glass human body outline"
-            />
+  id="glass-image"
+  class="glass-image"
+  src="Glassbody.png"
+  alt="Glass human body outline"
+/>
+
             <div id="marker-layer" class="marker-layer"></div>
           </div>
           <p class="hint">
