Change Root Health app link to login page

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
               and coaching around it.
             </p>
 
-            <a href="https://roothealth.app" class="cta-btn">
+            <a href="/login?goto=rootapp" class="cta-btn">
               <span>Continue to Root Health app</span>
               <span class="icon">→</span>
             </a>
