Update image tag and change link href

--- a/index.html
+++ b/index.html
@@ -429,12 +429,13 @@
       <main class="rh-main">
         <section class="figure-panel">
           <div class="figure-wrapper">
-            <img
+           <img
   id="glass-image"
   class="glass-image"
   src="Glassbody.png"
   alt="Glass human body outline"
 />
+
 
             <div id="marker-layer" class="marker-layer"></div>
           </div>
@@ -490,10 +491,10 @@
               and coaching around it.
             </p>
 
-            <a href="/login?goto=rootapp" class="cta-btn">
-              <span>Continue to Root Health app</span>
-              <span class="icon">→</span>
-            </a>
+           <a href="/?goto=rootapp" class="cta-btn">
+  <span>Continue to Root Health app</span>
+  <span class="icon">→</span>
+</a>
 
             <p class="cta-caption">
               Inside the app you&apos;ll have <strong>8 free credits</strong>.
